# ffmpeg-node-editor

./: CMakeLists.txt  README.md  filters.json  imgui.ini  vcpkg.json
.github/workflows/: ci.yml
imgui/: CMakeLists.txt
include/: backend.hpp  file_utils.hpp  imgui_extras.hpp  node_editor.hpp  pref.hpp  string_utils.hpp  util.hpp
include/extras/: IconsFontAwesome6.h_fa-regular-400.ttf.h  IconsFontAwesome6.h_fa-solid-900.ttf.h
include/ffmpeg/: filter.hpp  filter_graph.hpp  filter_node.hpp  profile.hpp  runner.hpp
overlays/imgui/: imgui-config.cmake.in  portfile.cmake  vcpkg.json
src/: backend.cpp  backend_glfw_opengl.cpp  backend_opengl.cpp  backend_win32_d3d12.cpp  file_utils.cpp  imgui_extras.cpp  imgui_extras_test.cpp  main.cpp  node_editor.cpp  pref.cpp  process.cpp  string_utils.cpp  util_test.cpp
src/ffmpeg/: filter_graph.cpp  profile.cpp  runner.cpp  runner_test.cpp
test/: temp427506003.mkv
